Name:              weather-api
Version:           0.0
Synopsis:          Weather api implemented in haskell

License:           MIT
License:           LICENSE
Author:            Peter
Build-type:        Simple

Cabal-version:     >= 1.2
Library
  Exposed-modules: WeatherApi, WeatherApi.Google
  Build-depends:   base, network
                  ,hxt           == 9.2.*
                  ,HTTP          == 4000.2.*
                  ,resource-pool == 0.2.1.*
